# fhir_importers

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODESTYLE.md  Dockerfile  LOCAL_DEV.md  Makefile  alembic.ini  create_patient.py  debug_consent.py  docker-compose.yml  organizations.json  pull_patient.py  pyproject.toml  pytest.ini  repro_healthex_test_patient_400.py  requirements.txt  test_flow.sh  test_healthex_flow.py  test_healthex_patient_auth.py  verify_consent.py
.github/: CODEOWNERS  dependabot.yml
alembic/: env.py
app/: airflow.py  auth.py  client.py  config.py  connections.py  crypto.py  db.py  healthex_client.py  healthex_links.py  healthex_routers.py  jwt_utils.py  main.py  models.py  routers.py  schemas.py  service.py  state_store.py
backend/: .env.example  requirements.txt
cli/: __main__.py  admin.py  common.py  fhir.py  fhir_ingest.py  patient.py  test_patient.py
deploy/: docker-compose.yaml
docs/: DATA_FLOW.md  README.md  api.md  deployment.md  frontend-remote.md  healthex-integration.md  healthkey-etl-integration.md  integration_architecture.md  integration_plan.md  observability.md  openapi.yaml  token-management.md
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.remote.config.ts
scripts/: load_orgs.py
services/: healthex_client.py  healthex_session.py  service_locator.py
tests/: conftest.py  fakes.py  test_connections_repo.py  test_crypto.py  test_healthex_client_consents.py  test_healthex_client_live.py  test_healthex_routes.py  test_organizations.py  test_routes.py  (+2 more)
(+217 files in other folders)
